# docker-practice

./: README.md  dockerfile  index.html
project-one/: Dockerfile  index.html
projectTwo/: Dockerfile  index.html  main.py  pyproject.toml
